--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/vim-ios"]
 	path = bundle/vim-ios
 	url = https://github.com/eraserhd/vim-ios.git
+[submodule "bundle/clang-complete"]
+	path = bundle/clang-complete
+	url = git@github.com:Rip-Rip/clang_complete.git
