Added vim surround plugin.
    The vim surround adds support for easily
    surrounding text with quotes, parenthesis, etc

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "bundle/clang-complete"]
 	path = bundle/clang-complete
 	url = git@github.com:Rip-Rip/clang_complete.git
+[submodule "bundle/vim-surround"]
+	path = bundle/vim-surround
+	url = git://github.com/tpope/vim-surround.git
