--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/vim-fugitive"]
 	path = bundle/vim-fugitive
 	url = git@github.com:tpope/vim-fugitive.git
+[submodule "bundle/msanders-snipmate.vim"]
+	path = bundle/msanders-snipmate.vim
+	url = git://github.com/msanders/snipmate.vim.git
