Added taglist plugin that helps you browse source code by providing an overview of the structure of source code files

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "bundle/airblade-vim-rooter"]
 	path = bundle/airblade-vim-rooter
 	url = git@github.com:airblade/vim-rooter.git
+[submodule "bundle/vim-scripts-taglist"]
+	path = bundle/vim-scripts-taglist
+	url = git@github.com:vim-scripts/taglist.vim.git
