Added repeat plugin that provides . command support to plugin mappings.

--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "bundle/tim-pope-unimpaired"]
 	path = bundle/tim-pope-unimpaired
 	url = git@github.com:tpope/vim-unimpaired.git
+[submodule "bundle/tim-pope-repeat"]
+	path = bundle/tim-pope-repeat
+	url = git@github.com:tpope/vim-repeat.git
