--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "bundle/tim-pope-repeat"]
 	path = bundle/tim-pope-repeat
 	url = git@github.com:tpope/vim-repeat.git
+[submodule "bundle/wincent-command-t"]
+	path = bundle/wincent-command-t
+	url = git@github.com:wincent/Command-T.git
