--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "bundle/wincent-command-t"]
 	path = bundle/wincent-command-t
 	url = git@github.com:wincent/Command-T.git
+[submodule "bundle/kien-ctrlp"]
+	path = bundle/kien-ctrlp
+	url = git@github.com:kien/ctrlp.vim.git
