--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "bundle/kien-ctrlp"]
 	path = bundle/kien-ctrlp
 	url = git@github.com:kien/ctrlp.vim.git
+[submodule "bundle/scrooloose-nerdtree"]
+	path = bundle/scrooloose-nerdtree
+	url = git@github.com:scrooloose/nerdtree.git
