--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/scrooloose-nerdtree"]
 	path = bundle/scrooloose-nerdtree
 	url = git@github.com:scrooloose/nerdtree.git
+[submodule "bundle/molokai"]
+	path = bundle/molokai
+	url = git@github.com:tomasr/molokai.git
